--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "typecheck": "flow",
     "lint": "eslint src",
     "precommit": "lint-staged",
-    "docs:dev": "npm run docs:generate && node docs/server.js",
-    "build": "next build docs && npm run docs:generate",
-    "start": "node docs/server.js",
-    "docs:generate": "gulp docs:markdown && react-docgen src/components/button/button.js --out docs/content/component-props.json --ignore [__tests__,__stories__]"
+    "docs:generate": "gulp docs:markdown && react-docgen src/components/button/button.js --out docs/content/components/_props.json --ignore [__tests__,__stories__]"
   },
   "lint-staged": {
     "*.js": [
@@ -49,6 +46,7 @@
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-styled-components": "^1.3.0",
     "babel-plugin-transform-builtin-extend": "1.1.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
@@ -74,11 +72,15 @@
     "gulp-markdown-to-json": "^1.0.3",
     "gulp-postcss": "^7.0.0",
     "gulp-util": "^3.0.8",
+    "highlight.js": "^9.12.0",
+    "html-loader": "^0.5.1",
     "husky": "0.13.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "21.0.0",
     "lint-staged": "3.4.2",
     "lodash": "4.17.2",
+    "markdown-in-js": "^1.1.3",
+    "markdown-loader": "^2.0.1",
     "marked": "^0.3.6",
     "next": "3.2.2",
     "postcss-cli": "3.2.0",
