--- a/site/package.json
+++ b/site/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "npm run docs:generate && npm run start",
     "build": "next build",
-    "start": "node server.js"
+    "start": "NODE_ENV=production node server.js"
   },
   "author": "Kalo Product",
   "license": "ISC",
