--- a/site/package.json
+++ b/site/package.json
@@ -8,7 +8,7 @@
   },
   "main": "server.js",
   "scripts": {
-    "dev": "npm run docs:generate && npm run start",
+    "dev": "NODE_ENV=development node --preserve-symlinks server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
   },
@@ -35,5 +35,18 @@
     "react-pure-render": "^1.0.2",
     "styled-components": "^2.2.3",
     "webpack": "^3.8.1"
+  },
+  "dependencies": {
+    "apollo-cache-inmemory": "^1.1.1",
+    "apollo-client": "^2.0.3",
+    "apollo-link-http": "^1.2.0",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
+    "isomorphic-fetch": "^2.2.1",
+    "next-routes": "^1.1.0",
+    "react-apollo": "^2.0.1",
+    "recon-config": "0.0.7",
+    "recon-engine": "0.0.7"
   }
 }
