--- a/package.json
+++ b/package.json
@@ -121,6 +121,10 @@
     "presets": ["es2015", "stage-2", "react"],
     "ignore": ["__stories__"]
   },
+  "engines": {
+    "node": "6.9.1",
+    "npm": "5.5.1"
+  },
   "jest": {
     "modulePaths": ["src/core", "src"],
     "moduleNameMapper": {
