--- a/site/package.json
+++ b/site/package.json
@@ -48,5 +48,9 @@
     "react-apollo": "^2.0.1",
     "recon-config": "0.0.7",
     "recon-engine": "0.0.7"
+  },
+  "engines": {
+    "node": "6.9.1",
+    "npm": "5.5.1"
   }
 }
