--- a/site/package.json
+++ b/site/package.json
@@ -16,13 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "@kalo/eslint-config": "^6.0.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-react-transform": "^3.0.0",
-    "babel-plugin-styled-components": "^1.3.0",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.10.0",
+    "eslint": "^4.10.0"
+  },
+  "dependencies": {
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "highlight.js": "^9.12.0",
@@ -34,9 +30,13 @@
     "react-dom": "^16.0.0",
     "react-pure-render": "^1.0.2",
     "styled-components": "^2.2.3",
-    "webpack": "^3.8.1"
-  },
-  "dependencies": {
+    "webpack": "^3.8.1",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-plugin-styled-components": "^1.3.0",
+    "css-loader": "^0.28.7",
     "apollo-cache-inmemory": "^1.1.1",
     "apollo-client": "^2.0.3",
     "apollo-link-http": "^1.2.0",
@@ -44,7 +44,6 @@
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "isomorphic-fetch": "^2.2.1",
-    "next-routes": "^1.1.0",
     "react-apollo": "^2.0.1",
     "recon-config": "0.0.7",
     "recon-engine": "0.0.7"
