--- a/package.json
+++ b/package.json
@@ -100,11 +100,11 @@
     "lodash": "^4.17.2",
     "prop-types": "^15.5.10",
     "qs": "^5.2.1",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react-addons-css-transition-group": "15.6.2",
+    "react-dom": "15.6.2",
     "react-hotkeys": "^0.9.0",
     "react-intl": "^2.1.5",
-    "react": "^15.4.1",
+    "react": "15.6.2",
     "recompose": "0.20.2"
   },
   "babel": {
