--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kalo/ui",
-  "version": "3.8.1",
+  "version": "3.7.0",
   "description": "A library of React components",
   "repository": {
     "type": "git",
@@ -20,7 +20,9 @@
     "precommit": "lint-staged",
     "generate:tokens": "node scripts/tokens.js",
     "generate:icons": "node scripts/icons.js",
-    "version": "npm run build"
+    "version": "npm run build",
+    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006"
   },
   "lint-staged": {
     "*.js": [
@@ -31,6 +33,10 @@
   "license": "ISC",
   "devDependencies": {
     "@kalo/eslint-config": "6.0.0",
+    "@storybook/addon-actions": "^4.1.18",
+    "@storybook/addon-links": "^4.1.18",
+    "@storybook/addons": "^4.1.18",
+    "@storybook/react": "^4.1.18",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "7.2.3",
@@ -107,12 +113,12 @@
     "polished": "^2.1.1",
     "prop-types": "^15.5.10",
     "qs": "^5.2.1",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react-addons-css-transition-group": "15.6.2",
+    "react-dom": "15.6.2",
     "react-emotion": "^9.0.0",
     "react-hotkeys": "^0.9.0",
     "react-intl": "^2.1.5",
-    "react": "^15.4.1",
+    "react": "15.6.2",
     "recompose": "0.20.2"
   },
   "babel": {
