--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "postcss-import": "9.1.0",
     "postcss-loader": "3.0.0",
     "prettier": "1.16.3",
-    "prop-types": "15.5.10",
+    "prop-types": "^15.5.10",
     "qs": "5.2.1",
     "react": "15.6.2",
     "react-addons-css-transition-group": "15.6.2",
